added new project

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Massively by HTML5 UP</title>
+    <title>My PortFolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -59,77 +59,77 @@
             <section class="posts">
                 <article>
                     <header>
-                        <h2><a href="https://github.com/milesbrain/myecommerce" id="myecommerce">MyEcommerce (JAVA, OAUTH, MYSQL):<br />
+                        <h2><a href="https://github.com/lukmanOye/myecommerce" id="myecommerce">MyEcommerce (JAVA, OAUTH, MYSQL):<br />
 										Real-Life Ecommerce Platform</a></h2>
                     </header>
-                    <a href="https://github.com/milesbrain/myecommerce" class="image fit"><img src="images/ecommerce.webp" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/myecommerce" class="image fit"><img src="images/ecommerce.webp" alt="" /></a>
                     <p>MyEcommerce is a robust, real-life ecommerce application designed to handle a wide range of functionalities, making it a standout project in my portfolio. This platform supports user authentication and OAuth integration for secure
                         access, allowing seamless login and account management. It includes features like product listings, shopping cart management, order processing, and payment gateway integration. Built with a focus on scalability, it employs a modular
                         architecture to support future enhancements. This project showcases my ability to develop complex, user-friendly applications with real-world applicability.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/milesbrain/myecommerce" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanOye/myecommerce" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/milesbrain/ubs_banking">UBS Banking clone (JAVA, MYSQL, JAVA-OTP, JAVAX.MAIL):<br />
+                        <h2><a href="https://github.com/lukmanOye/ubs_banking">UBS Banking clone (JAVA, MYSQL, JAVA-OTP, JAVAX.MAIL):<br />
 										Cloned Banking Management System</a></h2>
                     </header>
-                    <a href="https://github.com/milesbrain/ubs_banking" class="image fit"><img src="images/bank2.webp" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/ubs_banking" class="image fit"><img src="images/bank2.webp" alt="" /></a>
                     <p>UBS Banking is a comprehensive banking management system that clones functionalities from multiple banks, offering a unified platform for account management, transactions, and user authentication. Built with JavaFX for an intuitive
                         GUI, it simulates real banking operations including deposits, withdrawals, and account statements. The system integrates OTP generation for secure transactions and email notifications using JavaMail, highlighting advanced security
                         and communication features. This project showcases my skills in financial software development and system integration.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/milesbrain/ubs_banking" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanmiles280/ubs_banking" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/milesbrain/ukraine">Ukraine Clone (JAVA):<br />
-										Cultural Information App</a></h2>
+                        <h2><a href="https://github.com/lukmanOye/ukraine">Ukraine Banking App (Jsp,css,JAVA,MySql):<br />
+										Banking Application</a></h2>
                     </header>
-                    <a href="https://github.com/milesbrain/ukraine" class="image fit"><img src="images/bank_ukraniane.webp" alt="" /></a>
-                    <p>The Ukraine project is an application providing cultural and historical information about Ukraine. This project demonstrates my ability to create informative software with a focus on user engagement, featuring content display and navigation
-                        functionalities.
+                    <a href="https://github.com/lukmanOye/ukraine" class="image fit"><img src="images/bank_ukraniane.webp" alt="" /></a>
+                    <p>The Ukraine App is an application providing banking and financial information tailored for users. This project demonstrates my ability to create functional software with a focus on user engagement, featuring account management and
+                        transaction navigation functionalities
                     </p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/milesbrain/ukraine" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanOye/ukraine" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/milesbrain/Banking_Atm_system">Banking ATM System (JAVA, JAVAFX,MySQL):<br />
+                        <h2><a href="https://github.com/lukmanOye/Banking_Atm_system">Banking ATM System (JAVA, JAVAFX,MySQL):<br />
 										Real-Life Banking Simulation</a></h2>
                     </header>
-                    <a href="https://github.com/milesbrain/Banking_Atm_system" class="image fit"><img src="images/ATM.webp" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/Banking_Atm_system" class="image fit"><img src="images/ATM.webp" alt="" /></a>
                     <p>The Banking ATM System is a real-life simulation built using JavaFX for a graphical user interface, showcasing my expertise in GUI development and Java programming. This project simulates ATM functionalities such as balance checking,
                         withdrawals, deposits, and PIN management, providing a practical application of banking software concepts.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/milesbrain/Banking_Atm_system" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanOye/Banking_Atm_system" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/milesbrain/Calculator">Calculator (JAVA):<br />
+                        <h2><a href="https://github.com/lukmanOye/Calculator">Calculator (JAVA):<br />
 										Basic Arithmetic Tool</a></h2>
                     </header>
-                    <a href="https://github.com/milesbrain/Calculator" class="image fit"><img src="images//cal.webp" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/Calculator" class="image fit"><img src="images//cal.webp" alt="" /></a>
                     <p>The Calculator project is a straightforward application developed in Java, designed to perform basic arithmetic operations. It serves as a foundational project that demonstrates my understanding of logic and user interface design in
                         software development.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/milesbrain/Calculator" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanOye/Calculator" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/milesbrain/secretapp">SecretApp (JAVA,OAUTH2,MongoDB):<br />
+                        <h2><a href="https://github.com/lukmanOye/secretapp">SecretApp (JAVA,OAUTH2,MongoDB):<br />
 										Secure Message Sender</a></h2>
                     </header>
-                    <a href="https://github.com/milesbrain/secretapp" class="image fit"><img src="images/secret.jpg" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/secretapp" class="image fit"><img src="images/secret.jpg" alt="" /></a>
                     <p>SecretApp is an innovative project that allows users to send encrypted secret messages, emphasizing security and privacy. This application showcases my skills in cryptography and secure communication protocols, making it a unique addition
                         to my portfolio.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/milesbrain/secretapp" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanOye/secretapp" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
                 <article>
@@ -137,21 +137,21 @@
                         <h2><a href="https://github.com/milesbrain/todo">ToDo (JAVA,MongoDB):<br />
 										Task Management Tool</a></h2>
                     </header>
-                    <a href="https://github.com/milesbrain/todo" class="image fit"><img src="images/todo.webp" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/todo" class="image fit"><img src="images/todo.webp" alt="" /></a>
                     <p>The ToDo application is a task management tool designed to help users organize and track their daily tasks. This project reflects my ability to create productivity tools with a focus on user-friendly design and functionality.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/milesbrain/todo" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanOye/todo" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/milesbrain/job-listing">Job Listing (Spring Boot, Mongodb):<br />
+                        <h2><a href="https://github.com/lukmanOye/job-listing">Job Listing (Spring Boot, Mongodb):<br />
 										Job Board Application</a></h2>
                     </header>
-                    <a href="https://github.com/milesbrain/job-listing" class="image fit"><img src="images/job.webp" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/Job_Listing" class="image fit"><img src="images/job.webp" alt="" /></a>
                     <p>The Job Listing project is a web-based application for posting and browsing job opportunities. It demonstrates my skills in web development and database management, providing a platform for job seekers and employers to connect.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/milesbrain/job-listing" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanOye/Job_Listing" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
             </section>
@@ -173,8 +173,8 @@
                     </section>
                     <section>
                         <h3>Skills & Technologies</h3>
-                        <p><strong>Languages:</strong> Java, JavaScript<br />
-                            <strong>Frameworks:</strong> JavaFX, OAuth<br />
+                        <p><strong>Languages:</strong> Java, Html,Css<br />
+                            <strong>Frameworks:</strong> JavaFX, OAuth,Jpa,Jsp<br />
                             <strong>Databases:</strong> MySQL, MongoDB (where applicable)</p>
                     </section>
                 </section>
@@ -182,6 +182,7 @@
 
         </div>
     </div>
+
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
