--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li class="active"><a href="index.html">Home</a></li>
             </ul>
             <ul class="icons">
-                <li><a href="https://github.com/milesbrain" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://github.com/lukmanOye" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
             </ul>
         </nav>
 
@@ -80,7 +80,7 @@
                         GUI, it simulates real banking operations including deposits, withdrawals, and account statements. The system integrates OTP generation for secure transactions and email notifications using JavaMail, highlighting advanced security
                         and communication features. This project showcases my skills in financial software development and system integration.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/lukmanmiles280/ubs_banking" class="button">View on GitHub</a></li>
+                        <li><a href="https://github.com/lukmanOye/ubs_banking" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
                 <article>
@@ -113,7 +113,7 @@
                         <h2><a href="https://github.com/lukmanOye/Calculator">Calculator (JAVA):<br />
 										Basic Arithmetic Tool</a></h2>
                     </header>
-                    <a href="https://github.com/lukmanOye/Calculator" class="image fit"><img src="images//cal.webp" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/Calculator" class="image fit"><img src="images/cal.webp" alt="" /></a>
                     <p>The Calculator project is a straightforward application developed in Java, designed to perform basic arithmetic operations. It serves as a foundational project that demonstrates my understanding of logic and user interface design in
                         software development.</p>
                     <ul class="actions special">
@@ -122,7 +122,7 @@
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/lukmanOye/secretapp">SecretApp (JAVA,OAUTH2,MongoDB):<br />
+                        <h2><a href="https://github.com/lukmanOye/secretapp">SecretApp (JAVA)<br />
 										Secure Message Sender</a></h2>
                     </header>
                     <a href="https://github.com/lukmanOye/secretapp" class="image fit"><img src="images/secret.jpg" alt="" /></a>
@@ -134,7 +134,7 @@
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/milesbrain/todo">ToDo (JAVA,MongoDB):<br />
+                        <h2><a href="https://github.com/lukmanOye/todo">ToDo (JAVA,MongoDB):<br />
 										Task Management Tool</a></h2>
                     </header>
                     <a href="https://github.com/lukmanOye/todo" class="image fit"><img src="images/todo.webp" alt="" /></a>
@@ -182,7 +182,6 @@
 
         </div>
     </div>
-
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
