--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <header class="major">
                     <h2><a href="#">MY NAME IS<br />
 									OYEDOKUN LUKMAN OYEYEMI</a></h2>
-                    <p>I am a passionate and dedicated individual with a strong foundation in software development and a keen interest in computer science. With hands-on experience in creating diverse projects, I strive to build innovative solutions that
-                        showcase my technical skills and creativity. Currently exploring opportunities to further my expertise, I am committed to continuous learning and delivering high-quality work in the tech industry.</p>
+                    <p> I am passionate and dedicated with strong foundations in software development and keen interest in computer science. With hands-on experience developing diverse projects, I create innovative solutions that demonstrate my technical
+                        skills and creativity. Currently seeking opportunities to expand my expertise, I remain committed to continuous learning and delivering high-quality work in the technology industry.</p>
                 </header>
                 <a href="#" class="image main"><img src="images/coding.webp" alt="" /></a>
                 <ul class="actions special">
