--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+
 <html>
 
 <head>
@@ -154,6 +156,20 @@
                         <li><a href="https://github.com/lukmanOye/Job_Listing" class="button">View on GitHub</a></li>
                     </ul>
                 </article>
+                <article>
+                    <header>
+                        <h2><a href="https://github.com/lukmanOye/Book-Management">Book-Management (Spring Boot, MongoDB, OAuth2):<br />
+										Secure Book Management System</a></h2>
+                    </header>
+                    <a href="https://github.com/lukmanOye/Book-Management" class="image fit"><img src="https://images.unsplash.com/photo-1509266272358-7701da638078?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="" /></a>
+                    <p>Book-Management is a cutting-edge book management system built with Spring Boot and MongoDB, designed to enhance library or bookstore operations. It features secure user authentication via OAuth2 with Google and GitHub, ensuring robust
+                        access control. Users can view books, while admins have full privileges to post, update, delete, and manage books. This project highlights my expertise in backend development, role-based access control, and modern security practices,
+                        making it a scalable solution for any organization seeking efficient content management.</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/lukmanOye/Book-Management" class="button">View on GitHub</a></li>
+                    </ul>
+                </article>
+
             </section>
 
             <!-- Footer -->
@@ -174,8 +190,8 @@
                     <section>
                         <h3>Skills & Technologies</h3>
                         <p><strong>Languages:</strong> Java, Html,Css<br />
-                            <strong>Frameworks:</strong> JavaFX, OAuth,Jpa,Jsp<br />
-                            <strong>Databases:</strong> MySQL, MongoDB (where applicable)</p>
+                            <strong>Frameworks:</strong> JavaFX, OAuth,Jpa,Jsp,Spring Boot<br />
+                            <strong>Databases:</strong> MySQL, MongoDB, PostgreSQL (where applicable)</p>
                     </section>
                 </section>
             </footer>
