--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <h2><a href="https://github.com/lukmanOye/Book-Management">Book-Management (Spring Boot, MongoDB, OAuth2):<br />
 										Secure Book Management System</a></h2>
                     </header>
-                    <a href="https://github.com/lukmanOye/Book-Management" class="image fit"><img src="https://images.unsplash.com/photo-1509266272358-7701da638078?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="" /></a>
+                    <a href="https://github.com/lukmanOye/Book-Management" class="image fit"><img src="/images/books.webp" alt="" /></a>
                     <p>Book-Management is a cutting-edge book management system built with Spring Boot and MongoDB, designed to enhance library or bookstore operations. It features secure user authentication via OAuth2 with Google and GitHub, ensuring robust
                         access control. Users can view books, while admins have full privileges to post, update, delete, and manage books. This project highlights my expertise in backend development, role-based access control, and modern security practices,
                         making it a scalable solution for any organization seeking efficient content management.</p>
